# t_beauty

./: .dockerignore  .env.example  .env.render.example  .gitignore  ADMIN_ORDER_STATUS_WORKFLOW.md  ANALYTICS_API_IMPORT_FIX.md  ANALYTICS_IMPLEMENTATION_COMPLETE.md  ANALYTICS_IMPORT_FIX.md  API.md  API_LINKING_GUIDE.md  CELERY_SETUP.md  CHECKOUT_ERROR_FIX_SUMMARY.md  COMBINED_UPDATE_SUMMARY.md  CORRECTED_CUSTOMER_WORKFLOW_SUMMARY.md  CUSTOMER_API_GUIDE_UPDATED.md  CUSTOMER_ORDER_SCHEMA_FIX.md  CUSTOMER_WORKFLOW_IMPLEMENTATION_SUMMARY.md  CUSTOMER_WORKFLOW_SAMPLE_REQUESTS.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.prod  ENVIRONMENT_SETUP.md  FILE_UPLOAD_IMPLEMENTATION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  MAKEFILE_QUICKSTART.md  MISSING_FEATURES_ANALYSIS.md  MULTIPLE_FILE_UPLOAD_FIX.md  Makefile  ORDER_SERVICE_IMPLEMENTATION.md  PARTIAL_UPDATE_FIX.md  PAYMENT_IMPLEMENTATION_COMPLETE.md  PAYMENT_INVOICE_SAMPLE_REQUESTS.md  POSTGRESQL_SETUP_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  PRODUCT_AND_IMAGE_UPDATE_GUIDE.md  PRODUCT_FILE_UPLOAD_GUIDE.md  PRODUCT_IMAGES_FEATURE.md  PRODUCT_IMAGES_IMPLEMENTATION_SUMMARY.md  PRODUCT_INVENTORY_RESTRUCTURE.md  (+77 more)
config/: .env.example  .env.production  .env.production.example
docs/: README.md  customers.csv  installation.md
scripts/: add_cart_table_migration.py  add_product_images_migration.py  check_database.py  create_run_script.py  deploy.sh  docker-deploy.sh  docker-helper.sh  fix_database_schema.py  fix_image_urls_column.py  fix_price_column_conflict.py  fix_schema_mismatch.py  init-db.sql  inspect_database_schema.py  migrate_add_base_price.py  quick_recreate_db.py  recreate_database.py  recreate_schema.py  run_tests.py  start.sh  test.sh  test_config.py  test_inventory_list.py  (+4 more)
(+67 files in other folders)
